<resources>
    <string name="app_name">TM串口测试</string>

    <string name="text_serial_input">请输入串口</string>
    <string name="text_rate_input">请输入波特率</string>
    <string name="text_connect">连接串口</string>
    <string name="text_disconnect">断开连接</string>
    <string name="text_write_something">请输入要发送的内容</string>
    <string name="text_send">发送数据</string>
    <string name="text_send_data">串口发送的数据:</string>
    <string name="text_receive_data">串口接收的数据:</string>

    <string name="text_full_data">请输入串口和波特率</string>
    <string name="text_open_success">串口打开成功</string>
    <string name="text_open_fail">串口打开失败：%d</string>
    <string name="text_full_send_Data">发送内容不能为空</string>
    <string name="text_serial_open_fail">串口还未成功打开</string>
    <string name="text_other">其他 ></string>
    <string name="text_channel_correct">请输入正确的货道号</string>
    <string name="text_section_connect">连接设置</string>
    <string name="text_section_send">发送设置</string>
    <string name="text_status_connected">已连接：%1$s @ %2$d</string>
    <string name="text_status_idle">串口未连接</string>
    <string name="text_status_no_ports">未检测到串口</string>
    <string name="text_status_connecting">正在连接…</string>
    <string name="text_status_failed">连接失败：%1$s</string>
    <string name="text_no_ports">未检测到可用串口</string>
    <string name="text_mode_hex">HEX</string>
    <string name="text_mode_ascii">ASCII</string>
    <string name="text_log_title">通信日志</string>
    <string name="text_clear_log">清空日志</string>
    <string name="text_hex_invalid">HEX 格式非法</string>
    <string name="text_copy_success">已复制</string>
    <string name="text_connecting">连接中…</string>
    <string name="text_auto_scroll">自动滚动</string>
    <string name="text_show_time">显示时间</string>
    <string name="text_show_title">显示标题</string>
    <string name="text_hex_group_bold">HEX 5B强调</string>
    <string name="text_log_settings">日志显示设置</string>
    <string name="text_log_empty">暂无通信日志，开始发送或接收后会显示</string>
    <string name="text_reason_no_permission">无权限</string>
    <string name="text_reason_invalid_param">参数非法</string>
    <string name="text_reason_unknown">未知错误</string>
    <string name="text_baud_custom">自定义</string>
    <string name="text_baud_invalid">请输入正确的波特率</string>
    <string name="text_mock_port">模拟串口</string>

    <string name="text_common_commands_entry">常用命令</string>
    <string name="text_resend">重新发送</string>
    <string name="text_copy">复制</string>
    <string name="text_add_to_common">添加到常用命令</string>
    <string name="text_log_actions_title">日志操作</string>
    <string name="text_common_commands_title">常用命令</string>
    <string name="text_export_commands">导出命令</string>
    <string name="text_import_commands">导入命令</string>
    <string name="text_import_builtin_commands">内置命令</string>
    <string name="text_import_from_file">文件选择</string>
    <string name="text_clear_common_commands">清空全部</string>
    <string name="text_clear_common_confirm">确定清空全部常用命令？</string>
    <string name="text_common_empty_guide">添加方式：\n1. 在发送面板点击已发送的命令添加\n2. 选择文件导入，格式为 JSON 数组\n示例：[{\"content\":\"A0 01 00\",\"title\":\"设备状态查询\"},{\"content\":\"A0 02 00\"}]</string>
    <string name="text_common_added">已添加到常用命令</string>
    <string name="text_common_exists">常用命令已存在</string>
    <string name="text_export_done">已导出 %1$d 条命令</string>
    <string name="text_import_done">已导入 %1$d 条命令（%2$d 条已存在）</string>
    <string name="text_import_failed">导入失败</string>
    <string name="text_export_failed">导出失败</string>
    <string name="text_delete">删除</string>
    <string name="text_edit">编辑</string>
    <string name="text_common_deleted">已删除</string>
    <string name="text_common_cleared">已清空</string>
    <string name="text_edit_common_command">编辑常用命令</string>
    <string name="text_command_title">协议标题</string>
    <string name="text_command_title_hint">例如：设备状态查询</string>
    <string name="text_command_content">协议内容</string>
    <string name="text_command_content_hint">例如：A0 01 00</string>
    <string name="text_command_content_required">请输入协议内容</string>

</resources>
